fix spacing for mobile

--- a/packages/prop-house-webapp/src/components/NavBar/NavBar.module.css
+++ b/packages/prop-house-webapp/src/components/NavBar/NavBar.module.css
@@ -4,7 +4,7 @@
 }
 .mobileNavbar {
   padding-top: 1rem;
-  padding-bottom: 0;
+  padding-bottom: 1rem;
 }
 
 .navBarCollapse {
